--- a/claper.html
+++ b/claper.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>KRAtos</title>
+  <title>Aditya</title>
   <link rel="stylesheet" type="text/css" href="/clapp.css">
   <script src="//cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/gh/clappr/clappr-level-selector-plugin@latest/dist/level-selector.min.js"></script>
