--- a/embbed.html
+++ b/embbed.html
@@ -38,7 +38,7 @@
     }
 
     // Get parameters from the URL
-    var fileUrl = getParameterByName('emmbed-url');
+    var fileUrl = getParameterByName('url');
     var kid = getParameterByName('kid');
     var key = getParameterByName('key');
     
